Text to speech, and speech recognition!

--- a/Enfoca/Resources/Info.plist
+++ b/Enfoca/Resources/Info.plist
@@ -45,5 +45,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This permission is necessary to allow you to speak words aloud.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Access to the microphone is needed to enable the application to hear your answers.</string>
 </dict>
 </plist>
